feat：去除无用内容，修改项目配置

--- a/.env.production
+++ b/.env.production
@@ -1,6 +1,11 @@
+.env.sit
 VITE_APP_ENV='production'
 
+# Api Context
 VITE_APP_BASE_API='/api'
+
+# base Context
+VITE_APP_BASE_URL='/'
 
 # 删除console
 VITE_DROP_CONSOLE=true
